# dracon-warden-secret-encrypt-age-git-filter

./: .gitignore  BLUEPRINT.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  dracon-warden.example.toml  monorepo-README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature-or-problem.md
docs/: SOURCE_OF_TRUTH.md
scripts/: release.sh
src/: main.rs  print.rs  tests.rs
src/security/: Cargo.toml
src/security/src/: lib.rs
src/security/src/modules/: backup.rs  crypto.rs  environment.rs  filter.rs  keygen.rs  keys.rs  mod.rs  scanner.rs  team.rs
src/security/tests/: atomic_write_test.rs  backup_test.rs  common.rs  comprehensive_test.rs  leak_prevention_test.proptest-regressions  leak_prevention_test.rs  massive_secret_scan.proptest-regressions  massive_secret_scan.rs  pattern_integrity.rs  plaintext_sibling_test.rs  redos_stress_test.rs  registry_credentials_test.rs  restore_test.rs  scanner_edge_cases_test.rs  scanner_stress.rs  security_critical_test.rs  team_key_test.rs
tests/: integration_test.rs
